--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +15,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LRCDR"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".users.Users_history"
+            android:exported="false" />
+        <activity
+            android:name=".users.UpcomingReservationsActivity"
+            android:exported="false" />
         <activity
             android:name=".signup"
             android:exported="false" />
@@ -22,7 +31,6 @@
         <activity
             android:name=".admin.AdminUpdateStatusActivity"
             android:exported="false" />
-
         <activity
             android:name=".admin.AdminReservationHistoryActivity"
             android:exported="false" />
@@ -32,13 +40,12 @@
         <activity
             android:name=".admin.AdminHomepage"
             android:exported="false" />
-
         <activity
             android:name=".admin.AdminDrawerBaseActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -73,9 +80,5 @@
             android:name=".Login"
             android:exported="false" />
     </application>
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
 
 </manifest>
